# orphee

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
imgui/: CMakeLists.txt
imgui/backends/: CMakeLists.txt
imgui/misc/: CMakeLists.txt
include/: CMakeLists.txt
include/orphee/: App.hpp  CMakeLists.txt  OrpheeDefs.hpp  RenderStage.hpp  orphee.hpp  vkDefs.hpp  vkManager.hpp  vulkan.hpp
lib/: CMakeLists.txt
lib/orphee/: CMakeLists.txt  vkManager.cpp
models/: cube.usda  plane.usda  suzanne.usda
sandbox/: CMakeLists.txt  Sandbox.cpp  compute_sandbox.cpp  graphics_sandbox.cpp  heat_transfer.cpp  imgui_sandbox.cpp  mesh_sandbox.cpp
sandbox/mesh/: util.hpp
sandbox/shader/: util.hpp
shaders/: colorMapping.comp.glsl  compute.spv  fragment.spv  heatTransfer.comp.glsl  mesh.vert.glsl  simple.comp.glsl  vertex.spv
